# server/internal/pkg/usecases/transaction/repository.go
@@ -1,0 +1,12 @@
+package usecase
+
+import (
+	"context"
+	"time"
+)
+
+type TransactionRepository interface {
+	SaveTransaction(ctx context.Context, tripId int, userId int, name string, amount float64, categoryId int, description string, transactionDateTime time.Time) error
+	DeleteTransaction(ctx context.Context, transactionId int) error
+	UpdateTransaction(ctx context.Context, tripId int, userId int, name string, amount float64, categoryId int, description string, transactionDateTime time.Time, transactionId int) error
+}
